fix: GPXシナリオテストのリージョン登録問題を修正
- T-007とT-010のテストでregisterRegion()を追加
- SimulationTestHelperにregisterRegion()メソッドを追加
- SimulationTestHelperにUIKitインポートを追加

全103テスト通過

--- a/project.yml
+++ b/project.yml
@@ -70,6 +70,8 @@ targets:
     platform: iOS
     sources:
       - path: GeoKintaiTests
+      - path: SimulatedLocations
+        buildPhase: resources
     dependencies:
       - target: GeoKintai
     settings:
