--- a/project.yml
+++ b/project.yml
@@ -15,6 +15,7 @@ targets:
         PRODUCT_BUNDLE_IDENTIFIER: com.komorikouki.GeoKintaiCore
         GENERATE_INFOPLIST_FILE: YES
         SKIP_INSTALL: YES
+        ENABLE_APP_INTENTS_METADATA_GENERATION: NO
 
   GeoKintaiApp:
     type: application
@@ -30,6 +31,7 @@ targets:
         ASSETCATALOG_COMPILER_APPICON_NAME: ""
         CODE_SIGN_STYLE: Automatic
         DEVELOPMENT_TEAM: ""
+        ENABLE_APP_INTENTS_METADATA_GENERATION: NO
     dependencies:
       - target: GeoKintaiCore
 
@@ -43,6 +45,7 @@ targets:
       base:
         GENERATE_INFOPLIST_FILE: YES
         PRODUCT_BUNDLE_IDENTIFIER: com.komorikouki.GeoKintaiTests
+        ENABLE_APP_INTENTS_METADATA_GENERATION: NO
     dependencies:
       - target: GeoKintaiApp
       - target: GeoKintaiCore
